# iMeshDeform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  cluster_data.m
cmake-modules/: FindPETSc.cmake  FindSLEPc.cmake  FindTrimesh2.cmake
example/bar/: bar_affine.id  bar_cluster27.id  bar_rotation.id  bar_rotation50.id  origin_hansel.anim  rotated_hansel.anim  run.sh
example/box/: affine.id  box.off  box2.2.cluster25.id  box2.2.empty.id  box2.2.off  cluster25.id  pulltet_hansel.anim  pulltri_hansel.anim  pushtet_hansel.anim  pushtri_hansel.anim  run.sh  scene.1.cap.ppm  scene.1.obj.off  scene.2.cap.ppm  scene.2.obj.off  scene.3.cap.ppm  scene.3.obj.off  scene.4.cap.ppm  scene.4.obj.off
example/boxtet/: affine.id  box.1.ele  box.1.face  box.1.node  cluster25.id  default_remap.txt  run.sh
example/cactus/: cactus_affine.id  cactus_cluster27.id  cactus_rotation25.id  moved_hansel.anim  origin_hansel.anim  rotated_hansel.anim  run.sh
example/cylinder/: cylinder_affine.id  cylinder_cluster27.id  cylinder_rotation10.id  cylinder_rotation25.id  cylinder_rotation30.id  cylinder_rotation40.id  cylinder_rotation50.id  cylinder_rotation60.id  moved_hansel.anim  newbend_hansel.anim  original_hansel.anim  rotated_hansel.anim  run.sh
example/cylindertet/: cylinder.ele  cylinder.face  cylinder.node  cylinder_affine.id  cylinder_cluster27.id  cylinder_rot10.id  cylinder_rot25.id  cylinder_rot50.id  cylinder_rotation25.id  run.sh
example/dinosaur/: dinosaur.off  dinosaur_affine.id  dinosaur_cluster25.id  dinosaur_cluster30.id  dinosaur_empty.id  dinosaur_lin34.id  run.sh
example/dragon/: dragon.off  dragon_cluster30.id  dragon_empty.id  run.sh
example/fertility/: fertility.face  fertility.node  fertility_affine.id  fertility_cluster26.id  fertility_rotation25.id  run.sh
example/plane/: moved_hansel.anim  newmoved_hansel.anim  plane_affine.id  plane_linear25_cluster.id  plane_rot25_cluster.id  plane_v.off  plane_v_affine.id  plane_v_cluster27.id  plane_v_rotation25.id  run.sh
example/red_demon/: rd_empty.id  rd_lin30ss.id  rd_lin33ss.id  rd_mark7.id  rd_one.id  rd_r20+8.id  rd_r30+7.id  rd_r5+8.id
example/teapot/: affine.id  cluster28.id  rotation25.id  run.sh  scene.4.obj.off  strench_hansel.anim  teapot.face  teapot.off
example/teapottet/: affine.id  cluster28.id  default_remap.txt  insideout_hansel.anim  new_hansel.anim  rotation25.id  run.sh  scene.1.obj.off  small_hansel.anim  strench_hansel.anim  teapot.1.ele  teapot.1.node  teapot.1.smesh  tmp_hansel.anim  zeros.txt
example/test2/: Ahorigin_hansel.anim  arap_hansel.anim  bbc_handsel.anim  run.sh  scene1.anim  scene2.anim  test2_arap1.off  test2_arap2.off  test2_cluster1.id  test2_cluster2.id  test2_rigid.id  test2_rotation.id
example/test3/: run.sh  test2.1.cluster25.id  test2.1.ele  test2.1.face  test2.1.mesh  test2.1.node  test2.1.norigid.id  test2.1.off  test2.1.rigid.id  test2.1.rotation.id  test2.1.smesh
example/tree/: run.sh  tree.off  tree_c60.id  tree_empty.id
include/: fsvd.hh
include/subspace/: LB.hh  geometry.hh  gui.hh  mesh.hh  mesh_internal.hh  mesh_precompile.hh  subspace.hh  utility.hh
src/: CMakeLists.txt  iMeshDeform.cc  iTetDeform.cc  main.cc  preconfig.cc
src/fsvd/: CMakeLists.txt  svd.cc
src/subspace/: Animator.cc  CMakeLists.txt  LB.cc  Object.cc  Select.cc  VertSelect.cc  fastsvd.hh  gui.cc  mesh.cc  subspace.cc
src/test/: CMakeLists.txt  svd_test.cc
