CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(iMeshDeform)

SET(CMAKE_C_COMPILER icc)
SET(CMAKE_CXX_COMPILER icpc)

FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
#FIND_PACKAGE(CGAL REQUIRED)

LIST(APPEND CMAKE_MODULE_PATH cmake-modules)
FIND_PACKAGE(Trimesh2 REQUIRED)
FIND_PACKAGE(PETSc REQUIRED)
FIND_PACKAGE(SLEPc REQUIRED)

INCLUDE_DIRECTORIES(include ${PETSC_INCLUDES} ${SLEPC_INCLUDES} ${TRIMESH2_INCLUDES})
ADD_DEFINITIONS(${PETSC_DEFINITIONS})

# Static linking with Intel MKL
SET(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra -Wno-parentheses -Wno-unused -Wno-sign-compare -Wno-unknown-pragmas -mkl -openmp -pthread -static-intel -lrt")
SET(LIBS ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${PETSC_LIBRARIES} ${SLEPC_LIBRARIES} ${TRIMESH2_LIBRARIES})


ADD_SUBDIRECTORY(src/subspace lib/subspace)
#ADD_SUBDIRECTORY(src/fsvd     lib/fsvd)
#ADD_SUBDIRECTORY(src/test     bin/test)
ADD_SUBDIRECTORY(src bin)
