CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

PROJECT(iMeshDeform)

SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_CXX_COMPILER g++)


#FIND_PACKAGE(CGAL REQUIRED)

LIST(APPEND CMAKE_MODULE_PATH cmake-modules)
FIND_PACKAGE(Trimesh2 REQUIRED)
#FIND_PACKAGE(GSL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

#FIND_PACKAGE(PETSc REQUIRED)
#FIND_PACKAGE(SLEPc REQUIRED)

INCLUDE_DIRECTORIES(include ${TRIMESH2_INCLUDES})
#INCLUDE(${CGAL_USE_FILE})
#ADD_DEFINITIONS(${PETSC_DEFINITIONS})

SET(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra -Wno-parentheses -Wno-unused -Wno-sign-compare -Wno-unknown-pragmas -fopenmp")
SET(LIBS ${TRIMESH2_LIBRARIES} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})


ADD_SUBDIRECTORY(src/subspace lib/subspace)
#ADD_SUBDIRECTORY(src/fsvd     lib/fsvd)
#ADD_SUBDIRECTORY(src/test     bin/test)
ADD_SUBDIRECTORY(src bin)
